complete home page mobile view

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 				<div class="collapse navbar-collapse navbar-rmc-collapse" id="navbarSupportedContent">
 					<!-- || Nav -->
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<ul class="navbar-nav me-auto">
 						<li class="nav-item navbar-rmc-nav-item">
 							<a class="nav-link active text-uppercase fw-semibold fs-13 cursor-hs-scale ls-normal navbar-rmc-nav-link"
 								aria-current="page" href="">
@@ -105,9 +105,9 @@
 			<!-- || Block - Hero lead image animation -->
 			<div class="position-relative hero-lead-img-anim">
 				<div class="container">
-					<div class="row">
+					<div class="row mb-4">
 						<div class="col-lg">
-							<h2 class="display-4 fw-bold text-uppercase mb-4 ls-wide">High End <span
+							<h2 class="display-4 fw-bold text-uppercase ls-wide">High End <span
 									class="hero-lia-tittle-stroke">Creative</span> Agency</h2>
 						</div>
 
@@ -121,12 +121,13 @@
 					<div class="container mb-5">
 						<div class="row gy-5">
 							<div class="col-lg-4">
-								<p class="text-secondary lh-md fw-light mb-4">Through our years of experience, we've also learned that
+								<p class="text-secondary lh-md fw-light mb-4 pb-2">Through our years of experience, we've also learned
+									that
 									while
 									each channel has its own set of advantages.
 								</p>
 								<a href="https://youtu.be/AzwC6umvd1s"
-									class="text-uppercase text-decoration-none d-inline-block border ps-3 pe-1 py-1 border-secondary rounded-pill text-secondary fs-14 ls-wide cursor-hs-scale btn-capsule-shape-icon"><span
+									class="text-uppercase text-decoration-none d-inline-block border ps-3 pe-1 border-secondary rounded-pill text-secondary fs-14 ls-wide cursor-hs-scale btn-capsule-shape-icon"><span
 										class="d-inline-block me-2 btn-csi-text">Watch</span><span
 										class="d-inline-block rounded-circle btn-csi-circle"><svg xmlns="http://www.w3.org/2000/svg"
 											height="45" viewBox="0 -960 960 960" width="45">
@@ -159,7 +160,7 @@
 									aria-hidden="true">Our
 									Benefits</span>
 							</div>
-							<h3 class="h1 fw-semibold lh-base">Our Team of Dedicated Digital Professionals.</h3>
+							<h3 class="h1 fw-semibold lh-sm">Our Team of Dedicated Digital Professionals.</h3>
 						</div>
 
 						<div class="col-lg-8">
@@ -180,27 +181,27 @@
 						<div class="col-lg-6 image-overlap-tile company-til-image-ot">
 							<div class="image-ot-wr">
 								<div class="image-ot-img-1-wr">
-									<img class="image-ot-img-1" src="images/company/discussion-room.jpg"
+									<img class="w-100" src="images/company/discussion-room.jpg"
 										alt="An empty discussion room with a board">
 								</div>
 
 								<div class="image-ot-img-2-wr">
-									<img class="image-ot-img-2" src="images/company/employee.jpg" alt="A model employee">
+									<img class="w-100" src="images/company/employee.jpg" alt="A model employee">
 								</div>
 							</div>
 						</div>
 
 						<div class="col-lg-5">
-							<h3 class="h1 fw-semibold lh-base mb-5 pb-3">Unlock Revenue Growth for Your Business.</h3>
+							<h3 class="h1 fw-semibold lh-sm mb-5 pb-3">Unlock Revenue Growth for Your Business.</h3>
 							<div class="ms-3 ps-5">
-								<div class="row align-items-center mb-5">
+								<div class="row align-items-center mb-4 pb-2">
 									<div class="col-3 p-3">
 										<img class="w-100" src="images/company/company-icon1.png" alt="Icon">
 									</div>
 									<div class="col">
-										<h4 class="fs-6 mb-2">High Standerd</h4>
-										<p class="fs-15 text-secondary fw-light">Molestiae nulla labore ipsam maiores, perferendis qui quis
-											blanditiis nihil dignissimos!</p>
+										<h4 class="fs-6 mb-3">High Standerd</h4>
+										<p class="fs-15 text-secondary fw-light lh-md">Molestiae nulla labore ipsam maiores, perferendis qui
+											quis blanditiis nihil dignissimos!</p>
 									</div>
 								</div>
 
@@ -209,9 +210,9 @@
 										<img class="w-100" src="images/company/company-icon-2.png" alt="Icon">
 									</div>
 									<div class="col">
-										<h4 class="fs-6 mb-2">Ease of Communication</h4>
-										<p class="fs-15 text-secondary fw-light">Aliquam recusandae quisquam fugiat accusamus odit commodi
-											doloribus!</p>
+										<h4 class="fs-6 mb-3">Ease of Communication</h4>
+										<p class="fs-15 text-secondary fw-light lh-md">Aliquam recusandae quisquam fugiat accusamus odit
+											commodi doloribus!</p>
 									</div>
 								</div>
 							</div>
@@ -315,15 +316,15 @@
 					<div class="row row-cols-1 row-cols-lg-3 gy-5">
 						<div class="col">
 							<div class="border border-1 rounded-1 card-lead-icon">
-								<div class=" mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon1.png"
+								<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon1.png"
 										alt="Icon 1">
 								</div>
 
-								<div class="py-2 mb-1"><span class="text-secondary fs-14">Product Design</span></div>
+								<div class="pb-2 mb-1"><span class="text-secondary fs-14">Product Design</span></div>
 
 								<h3 class="h6 mb-3">Digital Product Design</h3>
 
-								<p class="text-secondary fs-14 fw-light lh-md mb-4">Creating a higher spacing and how people move
+								<p class="text-secondary fs-14 fw-light lh-md mb-4 pb-2">Creating a higher spacing and how people move
 									through
 									a unique.</p>
 
@@ -340,15 +341,15 @@
 
 						<div class="col">
 							<div class="border border-1 rounded-1 card-lead-icon">
-								<div class=" mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon-2.png"
+								<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon-2.png"
 										alt="Icon 1">
 								</div>
 
-								<div class="py-2 mb-1"><span class="text-secondary fs-14">Customs Services</span></div>
+								<div class="pb-2 mb-1"><span class="text-secondary fs-14">Customs Services</span></div>
 
 								<h3 class="h6 mb-3">Branding & Design</h3>
 
-								<p class="text-secondary fs-14 fw-light lh-md mb-4">Creating a higher spacing and how people move
+								<p class="text-secondary fs-14 fw-light lh-md mb-4 pb-2">Creating a higher spacing and how people move
 									through
 									a unique.</p>
 
@@ -365,15 +366,15 @@
 
 						<div class="col">
 							<div class="border border-1 rounded-1 card-lead-icon">
-								<div class=" mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon3.png"
+								<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon3.png"
 										alt="Icon 1">
 								</div>
 
-								<div class="py-2 mb-1"><span class="text-secondary fs-14">Product Development</span></div>
+								<div class="pb-2 mb-1"><span class="text-secondary fs-14">Product Development</span></div>
 
 								<h3 class="h6 mb-3">Web Development</h3>
 
-								<p class="text-secondary fs-14 fw-light lh-md mb-4">Creating a higher spacing and how people move
+								<p class="text-secondary fs-14 fw-light lh-md mb-4 pb-2">Creating a higher spacing and how people move
 									through
 									a unique.</p>
 
@@ -574,16 +575,17 @@
 
 						<div class="col-lg-7">
 							<div class="position-relative">
-								<div>
-									<img class="w-100" src="images/company/services.jpg" alt="Illustration of services">
+								<div style="height: 540px;">
+									<img class="w-100 h-100 object-fit-cover" src="images/company/services.jpg"
+										alt="Illustration of services">
 								</div>
 
 								<div class="position-absolute left-0 bottom-0 card-lead-icon-bg services-tic-img-col">
-									<div class=" mb-4 card-lib-icon-wr"><img class="w-100" src="images/company/company-icon1.png"
+									<div class="mb-4 pb-2 card-lib-icon-wr"><img class="w-100" src="images/company/company-icon1.png"
 											alt="Icon 1">
 									</div>
 
-									<p class="text-secondary fw-light lh-md mb-4">We are a creative studio specializing in design,
+									<p class="text-secondary fw-light lh-md mb-4 pb-2">We are a creative studio specializing in design,
 										development and strategy many different skills and disciplines in the production of all web.</p>
 
 									<a class="text-capitalize d-inline-block text-primary fs-14 p-1 link-underline-primary link-underline-opacity-0 link-underline-opacity-100-hover card-lib-link cursor-hs-scale"
@@ -688,7 +690,7 @@
 
 								<div class="row row-cols-auto justify-content-end pe-3">
 									<div
-										class="col swiper-button-prev rounded-circle border d-flex justify-content-center align-items-center me-3 tm-ss-swiper-btn">
+										class="col swiper-button-prev rounded-circle border d-flex justify-content-center align-items-center me-4 tm-ss-swiper-btn">
 										<i class="fa-solid fa-arrow-left-long text-secondary"></i>
 									</div>
 									<div
@@ -700,22 +702,22 @@
 						</div>
 					</div>
 
-					<hr class="border-top border-secondary">
+					<hr class="border-top border-secondary mb-5 pb-5">
 
-					<div class="row row-cols-1 row-cols-sm-1 row-cols-lg-4 justify-content-center gy-5 mt-4">
+					<div class="row row-cols-1 row-cols-sm-1 row-cols-lg-4 justify-content-center gy-5">
 						<div class="col">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count tm-ss-stat-count-stroke">16</p>
-							<h4 class="text-center h6 mb-4">Years of Experience</h4>
+							<h4 class="text-center h6 mb-5">Years of Experience</h4>
 						</div>
 
 						<div class="col">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count">4k</p>
-							<h4 class="text-center h6 mb-4">Projects Completed</h4>
+							<h4 class="text-center h6 mb-5">Projects Completed</h4>
 						</div>
 
 						<div class="col">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count tm-ss-stat-count-stroke">9k</p>
-							<h4 class="text-center h6 mb-4">Happy Customers</h4>
+							<h4 class="text-center h6 mb-5">Happy Customers</h4>
 						</div>
 
 						<div class="col">
@@ -735,7 +737,7 @@
 							aria-hidden="true">Our Blog</span>
 					</div>
 
-					<h2 class="h1 fw-semibold mb-5">Latest News</h2>
+					<h2 class="h1 fw-semibold mb-4">Latest News</h2>
 
 					<a class="fs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 mb-5 cursor-hs-scale link-circle-bg-icon"
 						href="/"><span>View All Our News</span><svg class="d-inline-block ps-1" xmlns="http://www.w3.org/2000/svg"
@@ -744,7 +746,7 @@
 								d="m241.615-258.693-31.614-31.615 413.923-414.308H241.308v-45.383h459.999v459.998h-45.384v-382.615L241.615-258.693Z" />
 						</svg></a>
 
-					<div class="row row-cols-1 row-cols-lg-2 gy-5">
+					<div class="row row-cols-1 row-cols-lg-2 gy-5 blog-lcl-card-ctr">
 						<div class="col">
 							<div class="border rounded-3 p-3">
 								<div class="row gy-4">
@@ -804,7 +806,7 @@
 				</a>
 			</div>
 
-			<div class="row row-cols-1 row-cols-lg-4 gy-4 border-bottom footer-rcl-nav">
+			<div class="row row-cols-1 row-cols-lg-4 gy-5 border-bottom footer-rcl-nav">
 				<div class="col">
 					<h3 class="h6 mb-3">Address</h3>
 					<address class="text-secondary fw-light">Germany — 785 15h Street, Office 478 Berlin, De 81566</address>
@@ -813,10 +815,10 @@
 				<div class="col">
 					<h3 class="h6 mb-3">Say Hello</h3>
 					<address>
-						<a class="d-block text-decoration-none text-secondary fw-light mb-2"
+						<a class="d-inline-block text-decoration-none text-secondary fw-light mb-2"
 							href="mailto:hello@design.com">hello@design.com</a>
-						<a class="d-block text-decoration-none text-primary fs-18 fw-medium" href="tel:+18408412569">+1 840 841 25
-							69</a>
+						<div></div>
+						<a class="d-inline-block text-decoration-none text-primary fs-18 fw-medium" href="tel:+18408412569">+1 840 841 25 69</a>
 					</address>
 				</div>
 
@@ -842,7 +844,7 @@
 					<h3 class="h6 mb-3">Newsletter</h3>
 					<form class="row border-bottom form-ns-minimal g-0">
 						<div class="col">
-							<input type="email" class="form-control bg-white border-0 w-100 fs-14 px-0" id="email"
+							<input type="email" class="form-control bg-white border-0 w-100 fs-14 px-0 py-2" id="email"
 								placeholder="Type Your Email">
 						</div>
 						<button type="submit" class="col-auto btn"><i class="fa-solid fa-arrow-right"></i></button>
@@ -850,7 +852,7 @@
 				</div>
 			</div>
 
-			<div class="row row-cols-1 row-cols-md-auto justify-content-around align-items-center gy-4 footer-rcl-brand-row">
+			<div class="row row-cols-1 row-cols-md-auto justify-content-around align-items-center gy-3 footer-rcl-brand-row">
 				<div class="col">
 					<a class="d-inline-block footer-rcl-logo-link" href="/">
 						<img class="w-100" src="images/logo-dark.png" alt="Kindled Logo">
@@ -859,10 +861,13 @@
 
 				<div class="col">
 					<p class="text-secondary fs-14 mb-1">© 2023 All Rights Reserved by Shameer Kamaludeen</p>
-					<p class="text-secondary fs-13 m-0 fw-light">Design inspired by <a href="https://themeforest.net/user/ui-themez"
-							target="_blank" class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover">UI-ThemeZ</a> <a
-							href="https://themeforest.net/item/geekfolio-creative-agency-portfolio-template/45360728" target="_blank"
-							class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover">Geekfolio Template</a></p>
+					<p class="text-secondary fs-13 m-0 fw-light">Design inspired by <a
+							href="https://themeforest.net/user/ui-themez" target="_blank"
+							class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover">UI-ThemeZ</a>
+						<a href="https://themeforest.net/item/geekfolio-creative-agency-portfolio-template/45360728" target="_blank"
+							class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover">Geekfolio
+							Template</a>
+					</p>
 				</div>
 			</div>
 		</div>
