check home page device small(sm) view

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
 				</a>
 			</div>
 
-			<div class="row row-cols-1 row-cols-lg-4 gy-5 border-bottom footer-rcl-nav">
+			<div class="row row-cols-1 row-cols-lg-4 gy-5 footer-rcl-nav">
 				<div class="col">
 					<h3 class="h6 mb-3">Address</h3>
 					<address class="text-secondary fw-light">Germany — 785 15h Street, Office 478 Berlin, De 81566</address>
@@ -818,7 +818,8 @@
 						<a class="d-inline-block text-decoration-none text-secondary fw-light mb-2"
 							href="mailto:hello@design.com">hello@design.com</a>
 						<div></div>
-						<a class="d-inline-block text-decoration-none text-primary fs-18 fw-medium" href="tel:+18408412569">+1 840 841 25 69</a>
+						<a class="d-inline-block text-decoration-none text-primary fs-18 fw-medium" href="tel:+18408412569">+1 840
+							841 25 69</a>
 					</address>
 				</div>
 
@@ -851,7 +852,11 @@
 					</form>
 				</div>
 			</div>
+		</div>
 
+		<hr class="m-0 border-secondary-subtle">
+
+		<div class="container">
 			<div class="row row-cols-1 row-cols-md-auto justify-content-around align-items-center gy-3 footer-rcl-brand-row">
 				<div class="col">
 					<a class="d-inline-block footer-rcl-logo-link" href="/">
@@ -860,7 +865,7 @@
 				</div>
 
 				<div class="col">
-					<p class="text-secondary fs-14 mb-1">© 2023 All Rights Reserved by Shameer Kamaludeen</p>
+					<p class="text-secondary fs-14 mb-1 fw-light">© 2023 All Rights Reserved by Shameer Kamaludeen</p>
 					<p class="text-secondary fs-13 m-0 fw-light">Design inspired by <a
 							href="https://themeforest.net/user/ui-themez" target="_blank"
 							class="text-secondary link-underline-secondary link-underline-opacity-0 link-underline-opacity-100-hover">UI-ThemeZ</a>
