check home page medium(md) view

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			<section class="company-tag-img-lead">
 				<div class="container">
 					<div class="row company-til-block-1">
-						<div class="col-lg-4">
+						<div class="col-md-11 col-lg-4">
 							<div class="mb-3">
 								<h2 class="visually-hidden">Our Benefits</h2>
 								<span
@@ -163,7 +163,7 @@
 							<h3 class="h1 fw-semibold lh-sm">Our Team of Dedicated Digital Professionals.</h3>
 						</div>
 
-						<div class="col-lg-8">
+						<div class="col-md-10 col-lg-8">
 							<p class="text-secondary lh-md fw-light mb-5">Through our years of experience, we’ve also learned that
 								while
 								each channel has its own set of
@@ -195,10 +195,10 @@
 							<h3 class="h1 fw-semibold lh-sm mb-5 pb-3">Unlock Revenue Growth for Your Business.</h3>
 							<div class="ms-3 ps-5">
 								<div class="row align-items-center mb-4 pb-2">
-									<div class="col-3 p-3">
+									<div class="col-3 col-md-2 p-3">
 										<img class="w-100" src="images/company/company-icon1.png" alt="Icon">
 									</div>
-									<div class="col">
+									<div class="col col-md-8">
 										<h4 class="fs-6 mb-3">High Standerd</h4>
 										<p class="fs-15 text-secondary fw-light lh-md">Molestiae nulla labore ipsam maiores, perferendis qui
 											quis blanditiis nihil dignissimos!</p>
@@ -206,10 +206,10 @@
 								</div>
 
 								<div class="row align-items-center">
-									<div class="col-3 p-3">
+									<div class="col-3 col-md-2 p-3">
 										<img class="w-100" src="images/company/company-icon-2.png" alt="Icon">
 									</div>
-									<div class="col">
+									<div class="col col-md-8">
 										<h4 class="fs-6 mb-3">Ease of Communication</h4>
 										<p class="fs-15 text-secondary fw-light lh-md">Aliquam recusandae quisquam fugiat accusamus odit
 											commodi doloribus!</p>
@@ -704,7 +704,7 @@
 
 					<hr class="border-top border-secondary mb-5 pb-5">
 
-					<div class="row row-cols-1 row-cols-sm-1 row-cols-lg-4 justify-content-center gy-5">
+					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center gy-5">
 						<div class="col">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count tm-ss-stat-count-stroke">16</p>
 							<h4 class="text-center h6 mb-5">Years of Experience</h4>
@@ -749,11 +749,11 @@
 					<div class="row row-cols-1 row-cols-lg-2 gy-5 blog-lcl-card-ctr">
 						<div class="col">
 							<div class="border rounded-3 p-3">
-								<div class="row gy-4">
-									<div class="col-lg-5">
+								<div class="row gy-4 align-items-center">
+									<div class="col-md-5">
 										<div><img class="w-100" src="images/blog/blog-image1.jpg" alt="Men working in laptop"></div>
 									</div>
-									<div class="col-lg-7">
+									<div class="col-md-7">
 										<div class="mb-3 fs-12 text-secondary ls-base"><span>AUGUST 6, 2022</span></div>
 										<h3 class="fs-18 ls-base me-5 lh-base mb-3">Free advertising for your online business.</h3>
 										<div class="mb-3">
@@ -769,11 +769,11 @@
 
 						<div class="col">
 							<div class="border rounded-3 p-3">
-								<div class="row gy-4">
-									<div class="col-lg-5">
+								<div class="row gy-4 align-items-center">
+									<div class="col-md-5">
 										<div><img class="w-100" src="images/blog/blog-image2.jpg" alt="Men working in laptop"></div>
 									</div>
-									<div class="col-lg-7">
+									<div class="col-md-7">
 										<div class="mb-3 fs-12 text-secondary ls-base"><span>AUGUST 6, 2022</span></div>
 										<h3 class="fs-18 ls-base me-5 lh-base mb-3">Business meeting 2023 in San Francisco.</h3>
 										<div class="mb-3">
@@ -857,7 +857,7 @@
 		<hr class="m-0 border-secondary-subtle">
 
 		<div class="container">
-			<div class="row row-cols-1 row-cols-md-auto justify-content-around align-items-center gy-3 footer-rcl-brand-row">
+			<div class="row row-cols-1 row-cols-md-auto justify-content-between align-items-center gy-3 footer-rcl-brand-row">
 				<div class="col">
 					<a class="d-inline-block footer-rcl-logo-link" href="/">
 						<img class="w-100" src="images/logo-dark.png" alt="Kindled Logo">
