change modules named default export with function expression

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							</a>
 						</li>
 					</ul>
-					<!-- || Search form -->
+					<!-- || Component - Form search anim -->
 					<div class="form-search-anim" role="search">
 						<button class="d-block h-100 bg-body p-0 form-sa-control overflow-hidden" type="button">
 							<div class="d-flex align-items-center justify-content-center w-100 h-100 form-sa-control-icon-wr-search">
@@ -204,7 +204,8 @@
 						</div>
 
 						<div class="col-md-10 col-lg-6 col-xl-5">
-							<p class="text-secondary lh-md fw-light mb-5 anim-swipe-in-tb">Through our years of experience, we’ve also learned that
+							<p class="text-secondary lh-md fw-light mb-5 anim-swipe-in-tb">Through our years of experience, we’ve also
+								learned that
 								while each channel has its own set of advantages, they all work best when strategically paired with
 								other channels.</p>
 							<a class="cfs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 cursor-hs-scale link-circle-bg-icon anim-opacity"
@@ -851,6 +852,7 @@
 		</article>
 	</main>
 
+	<!-- || Block - Footer responsive cols lead -->
 	<footer class="bg-white footer-resp-cols-lead">
 		<div class="container">
 			<h2 class="visually-hidden">Footer</h2>
