--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Google fonts ends -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 	<!-- local style import -->
 	<link rel="stylesheet" href="styles/style.css">
@@ -133,7 +134,7 @@
 		<article>
 			<!-- || Block - Hero lead image animation -->
 			<div class="position-relative hero-lead-img-anim">
-				<div class="container anim-opacity-y-up-delayed">
+				<div class="container animate__animated animate__delay-2s anim-gsap" data-animation="animate__fadeInUp">
 					<div class="row mb-4 mb-xl-5 align-items-center justify-content-between">
 						<div class="col-lg-8">
 							<h2 class="mb-0 display-1 cfs-xl-85 fw-bold text-uppercase ls-wide hero-lia-tittle">High End <span
@@ -159,7 +160,8 @@
 					<div class="container mb-5">
 						<div class="row">
 							<div class="col-lg-5">
-								<div class="ms-lg-5 ps-xl-4 ps-xxl-5 me-xl-3 anim-opacity-y-up-delayed">
+								<div class="ms-lg-5 ps-xl-4 ps-xxl-5 me-xl-3 animate__animated animate__delay-2s anim-gsap"
+									data-animation="animate__fadeInUp">
 									<p class="text-secondary lh-md fw-light mb-4 pb-2">Through our years of experience, we've also learned
 										that
 										while
@@ -178,7 +180,7 @@
 					</div>
 
 					<div class="hero-lia-img-col">
-						<div class="w-100 h-100 anim-y-up-delayed">
+						<div class="w-100 h-100 animate__animated animate__delay-2s anim-gsap" data-animation="animate__slideInUp">
 							<img src="images/hero.jpg" alt="Project Discussion" class="w-100 h-100 object-fit-cover">
 						</div>
 					</div>
@@ -193,23 +195,25 @@
 				<div class="container">
 					<div class="row justify-content-between company-til-block-1 align-items-center">
 						<div class="col-md-11 col-lg-5">
-							<div class="mb-3 anim-opacity">
+							<div class="mb-3">
 								<h2 class="visually-hidden">Our Benefits</h2>
 								<span
-									class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium"
-									aria-hidden="true">Our
+									class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium c-opacity-0 animate__animated anim-gsap"
+									data-animation="animate__fadeIn" aria-hidden="true">Our
 									Benefits</span>
 							</div>
-							<h3 class="h1 fw-semibold lh-sm anim-scale-rotate-x">Our Team of Dedicated Digital Professionals.</h3>
+							<h3 class="h1 fw-semibold lh-sm anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate">
+								Our Team of Dedicated Digital Professionals.</h3>
 						</div>
 
 						<div class="col-md-10 col-lg-6 col-xl-5">
-							<p class="text-secondary lh-md fw-light mb-5 anim-swipe-in-tb">Through our years of experience, we’ve also
+							<p class="text-secondary lh-md fw-light mb-5 anim-swipe-in-tb anim-gsap"
+								data-animation="anim-si-tb-animate">Through our years of experience, we’ve also
 								learned that
 								while each channel has its own set of advantages, they all work best when strategically paired with
 								other channels.</p>
-							<a class="cfs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 cursor-hs-scale link-circle-bg-icon anim-opacity"
-								href="/"><span>View All Our News</span><svg class="d-inline-block ps-1"
+							<a class="cfs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 cursor-hs-scale link-circle-bg-icon c-opacity-0 animate__animated anim-gsap"
+								href="/" data-animation="animate__fadeIn"><span>View All Our News</span><svg class="d-inline-block ps-1"
 									xmlns="http://www.w3.org/2000/svg" height="22" viewBox="0 -960 960 960" width="22">
 									<path
 										d="m241.615-258.693-31.614-31.615 413.923-414.308H241.308v-45.383h459.999v459.998h-45.384v-382.615L241.615-258.693Z" />
@@ -220,22 +224,24 @@
 					<div class="row justify-content-center">
 						<div class="col-lg-6 image-overlap-tile company-til-image-ot">
 							<div class="image-ot-wr">
-								<div class="image-ot-img-1-wr">
+								<div class="image-ot-img-1-wr anim-swipe-in-lr-zb anim-gsap" data-animation="anim-si-lr-zb-animate">
 									<img class="w-100" src="images/company/discussion-room.jpg"
 										alt="An empty discussion room with a board">
 								</div>
 
-								<div class="image-ot-img-2-wr">
+								<div class="image-ot-img-2-wr anim-swipe-in-lr-zb anim-gsap" data-animation="anim-si-lr-zb-animate">
 									<img class="w-100" src="images/company/employee.jpg" alt="A model employee">
 								</div>
 							</div>
 						</div>
 
 						<div class="col-lg-5">
-							<h3 class="h1 fw-semibold lh-sm mb-5 pb-3 anim-scale-rotate-x">Unlock Revenue Growth for Your Business.
+							<h3 class="h1 fw-semibold lh-sm mb-5 pb-3 anim-forward-flip-in-x anim-gsap"
+								data-animation="anim-ff-in-x-animate">Unlock Revenue Growth for Your Business.
 							</h3>
 							<div class="ms-3 ps-5">
-								<div class="row align-items-center mb-4 pb-2 anim-opacity">
+								<div class="row align-items-center mb-4 pb-2 c-opacity-0 animate__animated anim-gsap"
+									data-animation="animate__fadeIn">
 									<div class="col-auto company-til-thumbnail-wr">
 										<img class="w-100" src="images/company/company-icon1.png" alt="Icon">
 									</div>
@@ -247,7 +253,8 @@
 									</div>
 								</div>
 
-								<div class="row align-items-center anim-opacity">
+								<div class="row align-items-center c-opacity-0 animate__animated anim-gsap"
+									data-animation="animate__fadeIn">
 									<div class="col-auto company-til-thumbnail-wr">
 										<img class="w-100" src="images/company/company-icon-2.png" alt="Icon">
 									</div>
@@ -342,22 +349,26 @@
 						<div class="col-lg-7">
 							<div class="mb-3">
 								<span
-									class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium"
-									aria-hidden="true">Featured Services</span>
+									class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium c-opacity-0 animate__animated anim-gsap"
+									data-animation="animate__fadeIn" aria-hidden="true">Featured Services</span>
 							</div>
 
-							<h2 class="h1 fw-semibold lh-base">Our Services</h2>
+							<h2 class="h1 fw-semibold lh-base anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate">
+								Our Services</h2>
 						</div>
 
 						<div class="col-lg-5 col-xl-4">
-							<p class="fw-light text-secondary lh-md">Inventore repellendus officiis asperiores saepe ratione labore
+							<p class="fw-light text-secondary lh-md c-opacity-0 animate__animated anim-gsap"
+								data-animation="animate__fadeIn">
+								Inventore repellendus officiis asperiores saepe ratione labore
 								alias in nemo culpa dolorem? Odit animi.</p>
 						</div>
 					</div>
 
 					<div class="row row-cols-1 row-cols-lg-3 gy-5">
 						<div class="col">
-							<div class="border border-1 rounded-1 card-lead-icon">
+							<div class="border border-1 rounded-1 card-lead-icon c-opacity-0 animate__animated anim-gsap"
+								data-animation="animate__fadeIn">
 								<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon1.png"
 										alt="Icon 1">
 								</div>
@@ -382,7 +393,9 @@
 						</div>
 
 						<div class="col">
-							<div class="border border-1 rounded-1 card-lead-icon">
+							<div
+								class="border border-1 rounded-1 card-lead-icon c-opacity-0 animate__animated anim-gsap animate__delay-1s"
+								style="--animate-delay: .3s" data-animation="animate__fadeIn">
 								<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon-2.png"
 										alt="Icon 1">
 								</div>
@@ -407,7 +420,9 @@
 						</div>
 
 						<div class="col">
-							<div class="border border-1 rounded-1 card-lead-icon">
+							<div
+								class="border border-1 rounded-1 card-lead-icon c-opacity-0 animate__animated anim-gsap animate__delay-1s"
+								style="--animate-delay: .6s" data-animation="animate__fadeIn">
 								<div class="pb-3 mb-4 card-li-icon-wr"><img class="w-100" src="images/company/company-icon3.png"
 										alt="Icon 1">
 								</div>
@@ -646,15 +661,16 @@
 				<div class="container">
 					<div class="mb-3 text-center">
 						<span
-							class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium"
-							aria-hidden="true">Testimonials</span>
+							class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium c-opacity-0 animate__animated anim-gsap"
+							data-animation="animate__fadeIn" aria-hidden="true">Testimonials</span>
 					</div>
 
 					<h2 class="visually-hidden">Testimonials</h2>
 
-					<h3 class="text-center fw-semibold h1 pb-5">What people Says?</h3>
+					<h3 class="text-center fw-semibold h1 pb-5 anim-forward-flip-in-x anim-gsap"
+						data-animation="anim-ff-in-x-animate">What people Says?</h3>
 
-					<div class="row gy-5 tm-ss-tm-row">
+					<div class="row gy-5 tm-ss-tm-row c-opacity-0 animate__animated anim-gsap" data-animation="animate__fadeIn">
 						<div class="col-lg-5 pb-3">
 							<div class="mx-auto position-relative tm-ss-img-frame-ctr">
 								<div
@@ -749,24 +765,27 @@
 					<hr class="border-top border-secondary mb-5 pb-5">
 
 					<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center gy-5">
-						<div class="col">
+						<div class="col c-opacity-0 animate__animated anim-gsap" data-animation="animate__fadeIn">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count tm-ss-stat-count-stroke">16</p>
 							<h4 class="text-center h6 mb-5 mb-xl-4">Years of Experience</h4>
 						</div>
 
-						<div class="col">
+						<div class="col c-opacity-0 animate__animated anim-gsap animate__delay-1s" style="--animate-delay: .3s"
+							data-animation="animate__fadeIn">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count">4<span
 									class="fw-semibold tm-ss-stat-count-text">k</span></p>
 							<h4 class="text-center h6 mb-5 mb-xl-4">Projects Completed</h4>
 						</div>
 
-						<div class="col">
+						<div class="col c-opacity-0 animate__animated anim-gsap animate__delay-1s" style="--animate-delay: .6s"
+							data-animation="animate__fadeIn">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count tm-ss-stat-count-stroke">9<span
 									class="fw-semibold tm-ss-stat-count-text">k</span></p>
 							<h4 class="text-center h6 mb-5 mb-xl-4">Happy Customers</h4>
 						</div>
 
-						<div class="col">
+						<div class="col c-opacity-0 animate__animated anim-gsap animate__delay-1s" style="--animate-delay: .9s"
+							data-animation="animate__fadeIn">
 							<p class="text-center fw-800 lh-1 tm-ss-stat-count">12</p>
 							<h4 class="text-center h6">Awards Winning</h4>
 						</div>
@@ -775,21 +794,22 @@
 			</section>
 
 			<!-- || Block - Blog link card list -->
-			<section class="blog-link-card-list">
+			<section class="bg-body blog-link-card-list">
 				<div class="container">
 					<div class="row justify-content-between align-items-center gy-4 mb-5">
 						<div class="col-lg-auto">
 							<div class="mb-3">
 								<span
-									class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium"
-									aria-hidden="true">Our Blog</span>
+									class="cfs-12 text-uppercase d-inline-block border border-secondary px-4 py-2 rounded-pill ls-normal fw-medium c-opacity-0 animate__animated anim-gsap"
+									data-animation="animate__fadeIn" aria-hidden="true">Our Blog</span>
 							</div>
-							<h2 class="h1 fw-semibold">Latest News</h2>
+							<h2 class="h1 fw-semibold anim-forward-flip-in-x anim-gsap" data-animation="anim-ff-in-x-animate">Latest
+								News</h2>
 						</div>
 
 						<div class="col-lg-auto">
-							<a class="cfs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 cursor-hs-scale link-circle-bg-icon"
-								href="/"><span>View All Our News</span><svg class="d-inline-block ps-1"
+							<a class="cfs-14 link-primary link-underline link-underline-opacity-0 link-underline-opacity-100-hover text-capitalize d-inline-block ps-4 pe-2 cursor-hs-scale link-circle-bg-icon c-opacity-0 animate__animated anim-gsap"
+								data-animation="animate__fadeIn" href="/"><span>View All Our News</span><svg class="d-inline-block ps-1"
 									xmlns="http://www.w3.org/2000/svg" height="22" viewBox="0 -960 960 960" width="22">
 									<path
 										d="m241.615-258.693-31.614-31.615 413.923-414.308H241.308v-45.383h459.999v459.998h-45.384v-382.615L241.615-258.693Z" />
@@ -799,7 +819,8 @@
 
 					<div class="row row-cols-1 row-cols-lg-2 gy-5 blog-lcl-card-ctr">
 						<div class="col">
-							<div class="border rounded-3 p-3 py-xl-4 ps-xl-4">
+							<div class="border rounded-3 p-3 py-xl-4 ps-xl-4 c-opacity-0 animate__animated anim-gsap"
+								data-animation="animate__fadeIn">
 								<div class="row gy-4 align-items-center gx-lg-5 p-xl-2">
 									<div class="col-md-5 align-self-lg-stretch">
 										<div class="position-relative h-100 blog-lcl-card-img-relative-wr">
@@ -824,7 +845,9 @@
 						</div>
 
 						<div class="col">
-							<div class="border rounded-3 p-3 py-xl-4 ps-xl-4">
+							<div
+								class="border rounded-3 p-3 py-xl-4 ps-xl-4 c-opacity-0 animate__animated anim-gsap animate__delay-1s"
+								data-animation="animate__fadeIn" style="--animate-delay: .3s">
 								<div class="row gy-4 align-items-center gx-lg-5 p-xl-2">
 									<div class="col-md-5 align-self-lg-stretch">
 										<div class="position-relative h-100 blog-lcl-card-img-relative-wr">
@@ -853,7 +876,7 @@
 	</main>
 
 	<!-- || Block - Footer responsive cols lead -->
-	<footer class="bg-white footer-resp-cols-lead">
+	<footer class="bg-white position-relative z-n1 footer-resp-cols-lead">
 		<div class="container">
 			<h2 class="visually-hidden">Footer</h2>
 			<!-- || Component - Banner lg text stroke -->
