--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 							</div>
 
 							<div class="row justify-content-center">
-								<div class="col-lg-6 image-overlap-tile company-til-image-ot">
+								<div class="col-lg-6 image-overlap-tile overflow-hidden company-til-image-ot">
 									<div class="image-ot-wr">
 										<div class="image-ot-img-1-wr anim-swipe-in-lr-zb anim-gsap" data-animation="anim-si-lr-zb-animate">
 											<img class="w-100" src="images/company/discussion-room.jpg"
